--- a/sign_lang_img_classifier/predict.ipynb
+++ b/sign_lang_img_classifier/predict.ipynb
@@ -10,6 +10,7 @@
     "from tensorflow import keras\n",
     "\n",
     "import os\n",
+    "import sys\n",
     "from glob import glob\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -173,11 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "['./model\\\\026-0.5255.h5',\n",
-       " './model\\\\027-0.4543.h5',\n",
-       " './model\\\\041-0.4466.h5',\n",
-       " './model\\\\042-0.4323.h5',\n",
-       " './model\\\\045-0.3432.h5']"
+       "['./model\\\\004-best_model.h5']"
       ]
      },
      "execution_count": 10,
@@ -199,38 +196,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " sequential_2 (Sequential)   (None, 224, 224, 3)       0         \n",
+      " sequential (Sequential)     (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
-      " rescaling_1 (Rescaling)     (None, 224, 224, 3)       0         \n",
+      " rescaling_4 (Rescaling)     (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
-      " xception (Functional)       (None, 7, 7, 2048)        20861480  \n",
+      " conv2d_20 (Conv2D)          (None, 224, 224, 8)       224       \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 100352)            0         \n",
+      " batch_normalization_28 (Bat  (None, 224, 224, 8)      32        \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " dropout_5 (Dropout)         (None, 100352)            0         \n",
+      " re_lu_4 (ReLU)              (None, 224, 224, 8)       0         \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 2000)              200706000 \n",
+      " max_pooling2d_20 (MaxPoolin  (None, 112, 112, 8)      0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " dropout_6 (Dropout)         (None, 2000)              0         \n",
+      " conv2d_21 (Conv2D)          (None, 112, 112, 16)      1168      \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 1000)              2001000   \n",
+      " batch_normalization_29 (Bat  (None, 112, 112, 16)     64        \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " dropout_7 (Dropout)         (None, 1000)              0         \n",
+      " max_pooling2d_21 (MaxPoolin  (None, 56, 56, 16)       0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " dense_7 (Dense)             (None, 100)               100100    \n",
+      " conv2d_22 (Conv2D)          (None, 56, 56, 32)        4640      \n",
       "                                                                 \n",
-      " dropout_8 (Dropout)         (None, 100)               0         \n",
+      " batch_normalization_30 (Bat  (None, 56, 56, 32)       128       \n",
+      " chNormalization)                                                \n",
       "                                                                 \n",
-      " dense_8 (Dense)             (None, 11)                1111      \n",
+      " max_pooling2d_22 (MaxPoolin  (None, 28, 28, 32)       0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_23 (Conv2D)          (None, 28, 28, 64)        18496     \n",
+      "                                                                 \n",
+      " batch_normalization_31 (Bat  (None, 28, 28, 64)       256       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " max_pooling2d_23 (MaxPoolin  (None, 14, 14, 64)       0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_24 (Conv2D)          (None, 14, 14, 128)       73856     \n",
+      "                                                                 \n",
+      " batch_normalization_32 (Bat  (None, 14, 14, 128)      512       \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " max_pooling2d_24 (MaxPoolin  (None, 7, 7, 128)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten_4 (Flatten)         (None, 6272)              0         \n",
+      "                                                                 \n",
+      " dense_12 (Dense)            (None, 3136)              19672128  \n",
+      "                                                                 \n",
+      " batch_normalization_33 (Bat  (None, 3136)             12544     \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " dense_13 (Dense)            (None, 1568)              4918816   \n",
+      "                                                                 \n",
+      " batch_normalization_34 (Bat  (None, 1568)             6272      \n",
+      " chNormalization)                                                \n",
+      "                                                                 \n",
+      " dense_14 (Dense)            (None, 11)                17259     \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 223,669,691\n",
-      "Trainable params: 202,808,211\n",
-      "Non-trainable params: 20,861,480\n",
+      "Total params: 24,726,395\n",
+      "Trainable params: 24,716,491\n",
+      "Non-trainable params: 9,904\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -306,7 +339,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./result/3hiddenlayer.csv\",'w',encoding='utf8') as f:\n",
+    "filepath = \"./result/only_Dense_BN_Drop_ELU.csv\"\n",
+    "if os.path.exists(filepath):\n",
+    "    print(\"같은 이름의 파일이 존재합니다.\")\n",
+    "    sys.exit()\n",
+    "\n",
+    "with open(filepath,'w',encoding='utf8') as f:\n",
     "    f.write('file_name,label\\n')\n",
     "    for i in range(num_test):\n",
     "        f.write('{},{}\\n'.format(filenames[i],test_classes[i]))"
